[gd_scene load_steps=14 format=3 uid="uid://blf0p46xc3f7l"]

[ext_resource type="Script" uid="uid://n1h2tjc62mx4" path="res://scenes/objects/enchantment_table.gd" id="1_al7gv"]
[ext_resource type="Texture2D" uid="uid://caidts4w4cegf" path="res://assets/sprites/objects/Enchantment Tables Sprite Sheet.png" id="1_mowio"]
[ext_resource type="FontFile" uid="uid://7pvemrt714ge" path="res://assets/fonts/Kenney Pixel.ttf" id="3_6o28y"]
[ext_resource type="Texture2D" uid="uid://cvy8r52g3ggql" path="res://assets/sprites/ui/Letters.png" id="3_r6ypb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_al7gv"]
size = Vector2(64, 22)

[sub_resource type="Animation" id="Animation_al7gv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnchantmentTableSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [48]
}

[sub_resource type="Animation" id="Animation_6o28y"]
resource_name = "enchanting_weapon"
length = 1.54
loop_mode = 1
step = 0.12
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnchantmentTableSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75, 0.875, 1, 1.125, 1.25, 1.375),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71]
}

[sub_resource type="Animation" id="Animation_mowio"]
resource_name = "idle"
length = 0.48
loop_mode = 1
step = 0.12
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnchantmentTableSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [48, 49, 50, 51]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6o28y"]
_data = {
&"RESET": SubResource("Animation_al7gv"),
&"enchanting_weapon": SubResource("Animation_6o28y"),
&"idle": SubResource("Animation_mowio")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_mowio"]
radius = 41.0122

[sub_resource type="Animation" id="Animation_cg3qh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InputPrompt:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InputPrompt:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("InputPrompt:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_radwh"]
resource_name = "button_press"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("InputPrompt:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("InputPrompt:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("InputPrompt:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 43]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0f36j"]
_data = {
&"RESET": SubResource("Animation_cg3qh"),
&"button_press": SubResource("Animation_radwh")
}

[node name="EnchantmentTable" type="StaticBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource("1_al7gv")

[node name="EnchantmentTableSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_mowio")
hframes = 12
vframes = 6
frame = 48

[node name="EnchantmentTableCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -1)
shape = SubResource("RectangleShape2D_al7gv")

[node name="EnchantmentTableAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6o28y")
}
autoplay = "idle"

[node name="InteractionArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_mowio")

[node name="CooldownTimer" type="Timer" parent="."]

[node name="InputPrompt" type="Sprite2D" parent="."]
position = Vector2(0, -33)
texture = ExtResource("3_r6ypb")
hframes = 13
vframes = 5
frame = 4

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.5
offset_top = -71.0
offset_right = 113.5
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_6o28y")
theme_override_font_sizes/font_size = 24
text = "Upgrade Weapon - 5,000 Points"
horizontal_alignment = 1

[node name="InputPromptAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0f36j")
}
autoplay = "button_press"

[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_interaction_area_body_exited"]
